@@ -432,7 +432,6 @@ outside_network_create(struct comm_base *base, size_t bufsize,
 	outnet->num_tcp = num_tcp;
 	outnet->infra = infra;
 	outnet->rnd = rnd;
-	outnet->udp_second = 0;
 #ifndef INET6
 	do_ip6 = 0;
 #endif
@@ -491,13 +490,6 @@ outside_network_create(struct comm_base *base, size_t bufsize,
 		outnet->num_udp4 = done_4;
 	}
 	return outnet;
-}
-
-void 
-outside_network_set_secondary_buffer(struct outside_network* outnet,
-        ldns_buffer* buf)
-{
-	outnet->udp_second = buf;
 }
 
 /** helper pending delete */
@@ -974,6 +966,8 @@ serviced_callbacks(struct serviced_query* sq, int error, struct comm_point* c,
 {
 	struct service_callback* p = sq->cblist, *n;
 	int dobackup = (sq->cblist && sq->cblist->next); /* >1 cb*/
+	uint8_t *backup_p = NULL;
+	size_t backlen = 0;
 	rbnode_t* rem;
 	/* remove from tree, and schedule for deletion, so that callbacks
 	 * can safely deregister themselves and even create new serviced
@@ -987,16 +981,26 @@ serviced_callbacks(struct serviced_query* sq, int error, struct comm_point* c,
 		 * may send outgoing queries that overwrite the buffer.
 		 * use secondary buffer to store the query.
 		 * This is a data copy, but faster than packet to server */
-		ldns_buffer_copy(sq->outnet->udp_second, c->buffer);
+		backlen = ldns_buffer_limit(c->buffer);
+		backup_p = memdup(ldns_buffer_begin(c->buffer), backlen);
+		if(!backup_p) {
+			log_err("malloc failure in serviced query callbacks");
+			error = NETEVENT_CLOSED;
+			c = NULL;
+		}
 	}
 	while(p) {
 		n = p->next;
 		if(dobackup && c) {
-			ldns_buffer_copy(c->buffer, sq->outnet->udp_second);
+			ldns_buffer_clear(c->buffer);
+			ldns_buffer_write(c->buffer, backup_p, backlen);
+			ldns_buffer_flip(c->buffer);
 		}
 		(void)(*p->cb)(c, p->cb_arg, error, rep);
 		p = n;
 	}
+	if(backup_p)
+		free(backup_p);
 	verbose(VERB_ALGO, "svcd callbacks end");
 	log_assert(sq->cblist == NULL);
 	serviced_delete(sq);
