@@ -692,13 +692,6 @@ outside_network_delete(struct outside_network* outnet)
 	free(outnet);
 }
 
-void
-outside_network_set_secondary_buffer(struct outside_network* 
-	ATTR_UNUSED(outnet), ldns_buffer* ATTR_UNUSED(buf))
-{
-	/* nothing to do */
-}
-
 struct pending* 
 pending_udp_query(struct outside_network* outnet, ldns_buffer* packet,
 	struct sockaddr_storage* addr, socklen_t addrlen, int timeout,
